# prono

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  Makefile  PRODUCTION_TEST.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: db.sqlite3  pyproject.toml
app/core/: asgi.py  celery.py  middleware.py  settings.py  urls.py
app/projects/: api.py  consumers.py  models.py  schemas.py
app/projects/migrations/: 0001_initial.py
docker/django/: Dockerfile  Dockerfile.prod  entrypoint.sh  start-celery.sh  start.sh
docker/frontend/: Dockerfile
docker/nginx/: default.conf
frontend/: DEVELOPMENT.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts
